Fixed footer, spacing in about

--- a/assets/css/_navbar.scss
+++ b/assets/css/_navbar.scss
@@ -195,6 +195,7 @@ footer.navbar {
       letter-spacing: -0.5px;
       font-weight: 700;
       color: $gray__dark;
+      margin-top: 12px;
     }
   }
 }
