--- a/assets/css/style2.scss
+++ b/assets/css/style2.scss
@@ -101,7 +101,7 @@ html {
       position: relative;
       display: flex;
       flex-direction: column;
-      margin: 0 auto;
+      margin: 0 auto 2rem auto;
       img.img {
         box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2);
         max-width: 260px;
